--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,9 +48,17 @@ a,
 
 .hidden {
 	height: 0;
+	min-height: 0;
+	min-height: 0;
 	display: block;
+	opacity: 0;
 	overflow: hidden;
+	position: fixed;
+	right: 100%;
+	top: 100%;
 	width: 0;
+	max-width: 0;
+	min-width: 0;
 }
 
 .wrapper {
